[package]
name = "streamerpi"
version = "0.1.0"
authors = ["csviri <csviri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.3"
urlencoding = "1.1"
